addysnip/overlays/dev/deployment-domain-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-service
  namespace: addysnip
spec:
  template:
    spec:
      containers:
      - name: domain-service
