addysnip/overlays/dev/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: addysnip
spec:
  rules:
  - host: api.dev.addysnip.com
  tls:
  - hosts:
    - api.dev.addysnip.com
