addysnip/overlays/dev/ingress-ui-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-dashboard
  namespace: addysnip
spec:
  rules:
  - host: dashboard.dev.addysnip.com
  tls:
  - hosts:
    - dashboard.dev.addysnip.com
