addysnip/overlays/dev/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: addysnip
spec:
  rules:
  - host: www.dev.addysnip.com
  tls:
  - hosts:
    - www.dev.addysnip.com
